--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,19 +2,7 @@ cmake_minimum_required(VERSION 3.0)
 
 project(ice-engine)
 
-set(CMAKE_CXX_FLAGS  "-std=c++14")
-
-if(WIN32)
-    set(PTHREAD "")
-    set(SSL_LIB_NAME libssl-1_1-x64.lib)
-    set(CRYPTO_LIB_NAME libcrypto-1_1-x64.lib)
-else()
-    set(PTHREAD pthread)
-    set(SSL_LIB_NAME ssl)
-    set(CRYPTO_LIB_NAME crypto)
-endif(WIN32)
-
-set(OPENSSL_USE_STATIC_LIBS TRUE)
+#set(OPENSSL_USE_STATIC_LIBS TRUE)
 
 set(COMMON_ROOT ${CMAKE_SOURCE_DIR}/common/build/install)
 
@@ -24,7 +12,20 @@ set(COMMON_INCLUDE ${COMMON_ROOT}/include)
 
 set(COMMON_LIB ${COMMON_ROOT}/lib)
 
-include_directories(include ${COMMON_INCLUDE})
+set(PROJ_INCLUDE ${CMAKE_SOURCE_DIR}/include)
+
+include_directories(${PROJ_INCLUDE} ${COMMON_INCLUDE})
+
+if(WIN32)
+    set(PTHREAD "")
+    find_library(SSL_LIB_NAME libssl-1_1-x64.lib PATHS ${COMMON_LIB})
+    find_library(CRYPTO_LIB_NAME libcrypto-1_1-x64.lib PATHS ${COMMON_LIB})
+else()
+    set(CMAKE_CXX_FLAGS  "-std=c++14")
+    set(PTHREAD pthread)
+    set(SSL_LIB_NAME ssl)
+    set(CRYPTO_LIB_NAME crypto)
+endif(WIN32)
 
 file(GLOB ENGINE_SOURCES
     "include/ice-engine/*.h"    
@@ -38,19 +39,13 @@ add_library(
 target_include_directories(
     ice-engine-sdk 
     PUBLIC 
-    include 
+    ${PROJ_INCLUDE}
     ${COMMON_INCLUDE})
 
 target_link_libraries(
     ice-engine-sdk 
     PUBLIC
-    SDL2_static
+    #SDL2_staticd
     ${PTHREAD}
     ${SSL_LIB_NAME}
     ${CRYPTO_LIB_NAME})
-
-file(GLOB ENGINE_SOURCES
-    "include/ice-engine/*.h"
-    "test/*.cpp")
-
-add_executable(unittest)
