--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install)
 
 add_subdirectory(sdl2)
 add_subdirectory(openssl-cmake)
+add_subdirectory(json11)
