--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ include_directories(${PROJ_INCLUDE} ${COMMON_INCLUDE})
 if(WIN32)
     set(PTHREAD "")
     find_library(SSL_LIB_NAME libssl-1_1-x64.lib PATHS ${COMMON_LIB})
-    find_library(SDL2_LIB_NAME SDL2_staticd.lib PATHS ${COMMON_LIB})
+    # find_library(SDL2_LIB_NAME SDL2_staticd.lib PATHS ${COMMON_LIB})
     find_library(CRYPTO_LIB_NAME libcrypto-1_1-x64.lib PATHS ${COMMON_LIB})
     set(DL "")
 else()
@@ -27,7 +27,7 @@ else()
     set(PTHREAD pthread)
     find_library(SSL_LIB_NAME libssl.a PATHS ${COMMON_LIB})
     find_library(CRYPTO_LIB_NAME libcrypto.a PATHS ${COMMON_LIB})
-    find_library(SDL2_LIB_NAME SDL2_staticd.a PATHS ${COMMON_LIB})
+    # find_library(SDL2_LIB_NAME SDL2_staticd.a PATHS ${COMMON_LIB})
     find_library(DL libdl.so PATHS /usr/lib/x86_64-linux-gnu/)
 endif(WIN32)
 
@@ -59,8 +59,7 @@ target_link_libraries(
     ${DL}
     ${PTHREAD}
     ${SSL_LIB_NAME}
-    ${CRYPTO_LIB_NAME}
-    ${SDL2_LIB_NAME})
+    ${CRYPTO_LIB_NAME})
 
 file(GLOB CLIENT_SOURCES
     "include/ice-engine/*.h"
