Putting bluetooth on hold for now to focus on UDP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.0)
 
 project(ice-engine C CXX)
 
+set( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" )
+
 set(OPENSSL_USE_STATIC_LIBS TRUE)
 
 set(COMMON_ROOT ${CMAKE_SOURCE_DIR}/common/build/install)
@@ -13,8 +15,6 @@ set(COMMON_INCLUDE ${COMMON_ROOT}/include)
 set(COMMON_LIB ${COMMON_ROOT}/lib)
 
 set(PROJ_INCLUDE ${CMAKE_SOURCE_DIR}/include)
-
-include_directories(${PROJ_INCLUDE} ${COMMON_INCLUDE})
 
 if(WIN32)
     set(PTHREAD "")
@@ -29,9 +29,11 @@ else()
     set(PTHREAD Threads::Threads)
     find_library(SSL_LIB_NAME libssl.a PATHS ${COMMON_LIB})
     find_library(CRYPTO_LIB_NAME libcrypto.a PATHS ${COMMON_LIB})
-    # find_library(SDL2_LIB_NAME SDL2_staticd.a PATHS ${COMMON_LIB})
     find_library(DL libdl.so PATHS /usr/lib/x86_64-linux-gnu/)
 endif(WIN32)
+
+include_directories(${PROJ_INCLUDE} ${COMMON_INCLUDE})
+
 
 file(GLOB ENGINE_SOURCES
     "include/ice-engine/*.h"    
@@ -105,40 +107,40 @@ target_link_libraries(
 
     file(GLOB CLIENT_SOURCES
     "include/ice-engine/*.h"
-    "examples/ice-engine/bluetooth_client.cpp")
+    "examples/ice-engine/udp_client.cpp")
 
 add_executable(
-    bluetooth-client
+    udp-client
     ${CLIENT_SOURCES})
 
 target_include_directories(
-    bluetooth-client
+    udp-client
     PUBLIC 
     ${PROJ_INCLUDE}
     ${COMMON_INCLUDE})
 
 target_link_libraries(
-    bluetooth-client 
+    udp-client 
     PUBLIC
     ice-engine-sdk
     ${PTHREAD})
 
 file(GLOB SERVER_SOURCES
     "include/ice-engine/*.h"
-    "examples/ice-engine/bluetooth_server.cpp")
+    "examples/ice-engine/udp_server.cpp")
 
 add_executable(
-    bluetooth-server
+    udp-server
     ${SERVER_SOURCES})
 
 target_include_directories(
-    bluetooth-server
+    udp-server
     PUBLIC 
     ${PROJ_INCLUDE}
     ${COMMON_INCLUDE})
 
 target_link_libraries(
-    bluetooth-server 
+    udp-server 
     PUBLIC
     ice-engine-sdk
     ${PTHREAD})
