Added files for graphics components

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ set(PROJ_INCLUDE ${CMAKE_SOURCE_DIR}/include)
 if(WIN32)
     set(PTHREAD "")
     find_library(SSL_LIB_NAME libssl-1_1-x64.lib PATHS ${COMMON_LIB})
-    # find_library(SDL2_LIB_NAME SDL2_staticd.lib PATHS ${COMMON_LIB})
+    find_library(SDL2_LIB_NAME SDL2_staticd.lib PATHS ${COMMON_LIB})
     find_library(CRYPTO_LIB_NAME libcrypto-1_1-x64.lib PATHS ${COMMON_LIB})
     set(DL "")
 else()
