Moved examoles to different directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,82 +62,4 @@ target_link_libraries(
     ${SSL_LIB_NAME}
     ${CRYPTO_LIB_NAME})
 
-file(GLOB CLIENT_SOURCES
-    "include/ice-engine/*.h"
-    "examples/ice-engine/tcp_client.cpp")
-
-add_executable(
-    tcp-client
-    ${CLIENT_SOURCES})
-
-target_include_directories(
-    tcp-client
-    PUBLIC 
-    ${PROJ_INCLUDE}
-    ${COMMON_INCLUDE})
-
-target_link_libraries(
-    tcp-client 
-    PUBLIC
-    ice-engine-sdk
-    ${PTHREAD})
-
-file(GLOB SERVER_SOURCES
-    "include/ice-engine/*.h"
-    "examples/ice-engine/tcp_server.cpp")
-
-add_executable(
-    tcp-server
-    ${SERVER_SOURCES})
-
-target_include_directories(
-    tcp-server
-    PUBLIC 
-    ${PROJ_INCLUDE}
-    ${COMMON_INCLUDE})
-
-target_link_libraries(
-    tcp-server 
-    PUBLIC
-    ice-engine-sdk
-    ${PTHREAD})
-
-    file(GLOB CLIENT_SOURCES
-    "include/ice-engine/*.h"
-    "examples/ice-engine/udp_client.cpp")
-
-add_executable(
-    udp-client
-    ${CLIENT_SOURCES})
-
-target_include_directories(
-    udp-client
-    PUBLIC 
-    ${PROJ_INCLUDE}
-    ${COMMON_INCLUDE})
-
-target_link_libraries(
-    udp-client 
-    PUBLIC
-    ice-engine-sdk
-    ${PTHREAD})
-
-file(GLOB SERVER_SOURCES
-    "include/ice-engine/*.h"
-    "examples/ice-engine/udp_server.cpp")
-
-add_executable(
-    udp-server
-    ${SERVER_SOURCES})
-
-target_include_directories(
-    udp-server
-    PUBLIC 
-    ${PROJ_INCLUDE}
-    ${COMMON_INCLUDE})
-
-target_link_libraries(
-    udp-server 
-    PUBLIC
-    ice-engine-sdk
-    ${PTHREAD})
+add_subdirectory(examples)
