Moved some files around

--- a/examples/dtls-basic/CMakeLists.txt
+++ b/examples/dtls-basic/CMakeLists.txt
@@ -1,35 +1,31 @@
 add_executable(
-    log-client
-    common.h
-    common.cpp
+    dtls-client
     client.cpp)
 
 target_include_directories(
-    log-client
+    dtls-client
     PUBLIC 
     ${PROJ_INCLUDE}
     ${COMMON_INCLUDE})
 
 target_link_libraries(
-    log-client 
+    dtls-client 
     PUBLIC
     ice-engine-sdk
     ${PTHREAD})
 
 add_executable(
-    log-server
-    common.h
-    common.cpp
+    dtls-server
     server.cpp)
 
 target_include_directories(
-    log-server
+    dtls-server
     PUBLIC 
     ${PROJ_INCLUDE}
     ${COMMON_INCLUDE})
 
 target_link_libraries(
-    log-server 
+    dtls-server 
     PUBLIC
     ice-engine-sdk
     ${PTHREAD})
