Added to echo protocol

--- a/examples/tls-basic/CMakeLists.txt
+++ b/examples/tls-basic/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_executable(
     tls-client
-    client.cpp)
+    client.cpp
+    echo.h
+    echo.cpp)
 
 target_include_directories(
     tls-client
