Echo protocol bug on Windows 7

--- a/examples/tls-basic/CMakeLists.txt
+++ b/examples/tls-basic/CMakeLists.txt
@@ -18,7 +18,9 @@ target_link_libraries(
 
 add_executable(
     tls-server
-    server.cpp)
+    server.cpp
+    echo.h
+    echo.cpp)
 
 target_include_directories(
     tls-server
