--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_subdirectory(tls-echo)
 add_subdirectory(dtls-basic)
 add_subdirectory(tls-logger)
+
+if(WIN32)
+    add_subdirectory(gui-basic)
+endif()
