--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ else()
     find_package(Threads REQUIRED)    
     set(PTHREAD Threads::Threads)
     find_library(SSL_LIB_NAME libssl.a PATHS ${COMMON_LIB})
+    find_library(SDL2_LIB_NAME libSDL2_static.a PATHS ${COMMON_LIB})
     find_library(CRYPTO_LIB_NAME libcrypto.a PATHS ${COMMON_LIB})
     find_library(DL libdl.so PATHS /usr/lib/x86_64-linux-gnu/)
 endif(WIN32)
