Implemented a first iteration of threadpool: Creates pool, add task to queue  functionality and destruction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ target_include_directories(
 target_link_libraries(
     ice-engine-sdk 
     PUBLIC
+    sndio
     ${DL}
     ${PTHREAD}
     ${SSL_LIB_NAME}
