--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,6 @@
 #TODO: Refactor examples for new networking API
-add_subdirectory(netpong)
+#add_subdirectory(netpong)
 #add_subdirectory(tls-echo)
 #add_subdirectory(dtls-basic)
 #add_subdirectory(tls-logger)
-add_subdirectory(gui-basic)
+#add_subdirectory(gui-basic)
